# snowman

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO.md  agc_8h_source.html  annotated.html  audio-lib_8h_source.html  clang-format.sh  classes.html  classsnowboy_1_1AffineComponent-members.html  classsnowboy_1_1AffineComponent.html  classsnowboy_1_1AffineComponent__coll__graph.md5  classsnowboy_1_1AffineComponent__inherit__graph.map  classsnowboy_1_1ChunkInfo-members.html  classsnowboy_1_1ChunkInfo.html  classsnowboy_1_1CmvnComponent-members.html  classsnowboy_1_1CmvnComponent.html  classsnowboy_1_1CmvnComponent__inherit__graph.map  classsnowboy_1_1CmvnComponent__inherit__graph.md5  classsnowboy_1_1Component-members.html  classsnowboy_1_1Component.html  classsnowboy_1_1Component__inherit__graph.map  classsnowboy_1_1Component__inherit__graph.md5  classsnowboy_1_1EavesdropStream-members.html  classsnowboy_1_1EavesdropStream.html  classsnowboy_1_1EavesdropStream__coll__graph.map  classsnowboy_1_1EavesdropStream__coll__graph.md5  classsnowboy_1_1EavesdropStream__inherit__graph.map  classsnowboy_1_1EavesdropStream__inherit__graph.md5  classsnowboy_1_1Fft-members.html  classsnowboy_1_1Fft.html  classsnowboy_1_1FftStream-members.html  classsnowboy_1_1FftStream.html  classsnowboy_1_1FftStream__coll__graph.map  classsnowboy_1_1FftStream__coll__graph.md5  classsnowboy_1_1FftStream__inherit__graph.map  classsnowboy_1_1FftStream__inherit__graph.md5  classsnowboy_1_1Fft__inherit__graph.map  (+464 more)
.github/: FUNDING.yml  SECURITY.md
.github/workflows/: clang-format.yml  cmake.yml  documentation.yml
apps/: CMakeLists.txt  cut.cpp  detect-live.cpp  enroll-live.cpp  enroll.cpp  helper.cpp  helper.h  pulseaudio.h
audio_samples/: record1.wav.cut  record2.wav.cut  record3.wav.cut
cmake/: FetchGoogleTest.cmake
lib/: CMakeLists.txt  agc.cpp  agc.h  audio-lib.cpp  audio-lib.h  dtw-lib.cpp  dtw-lib.h  eavesdrop-stream.cpp  eavesdrop-stream.h  feat-lib.cpp  feat-lib.h  fft-stream.cpp  fft-stream.h  frame-info.h  framer-stream.cpp  framer-stream.h  frontend-lib.cpp  frontend-lib.h  frontend-stream.cpp  frontend-stream.h  gain-control-stream.cpp  gain-control-stream.h  intercept-stream.cpp  intercept-stream.h  license-lib.cpp  license-lib.h  matrix-types.h  matrix-wrapper.cpp  matrix-wrapper.h  mfcc-stream.cpp  mfcc-stream.h  nnet-component.cpp  nnet-component.h  nnet-lib.cpp  nnet-lib.h  nnet-stream.cpp  nnet-stream.h  noise_suppression_x.cpp  ns3.cpp  ns3.h  (+50 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+7 more)
test/: CMakeLists.txt  ClassifyTest.cpp  CutTest.cpp  DtwTest.cpp  EnrollTest.cpp  VectorTest.cpp  helper.cpp  helper.h  inspector.cpp  inspector.h
wasm/: CMakeLists.txt  bindings.cpp  snowman.post.js  snowman.pre.js
wasm/builder/: CLAPACK-WA.patch  Dockerfile  build.sh
wasm/example/: audio-processor.js  file-upload.html  index.html  index.js  serve.json  snowboy_wasm.js
